[package]
name = "po-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
po-node = { path = "../../crates/po-node" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
