[package]
name = "po-cli"
description = "Command-line interface for Protocol Orzatty nodes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
po-node = { workspace = true }
po-crypto = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
