[package]
name = "po-crypto"
description = "Cryptographic identity, key exchange, and AEAD encryption for Protocol Orzatty"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["crypto", "ed25519", "chacha20", "e2ee", "protocol"]
categories = ["cryptography", "network-programming"]

[dependencies]
po-wire = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
zeroize = { workspace = true }
