[package]
name = "po-transport"
description = "Transport abstractions and QUIC implementation for Protocol Orzatty"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["quic", "transport", "async", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
po-wire = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
